rust/tests/snapshots/help/destinations__list.snap
---
source: tests/cli/snapshots.rs
---
List all destinations

Usage: vendo destinations list [OPTIONS]

Options:
      --profile <name>   Use a specific account profile
      --state <state>    Filter by state (active, inactive)
      --debug            Enable verbose request diagnostics
      --status <status>  Filter by status
      --type <type>      Filter by data type
      --limit <n>        Number of results [default: 20]
      --offset <n>       Pagination offset [default: 0]
      --json             Output raw JSON
      --output <field>   Print a single field per row (e.g. id)
  -h, --help             Print help

Examples:
  $ vendo destinations list
  $ vendo destinations list --state active
  $ vendo destinations list --output id
