rust/tests/snapshots/help/destinations__resume.snap
---
source: tests/cli/snapshots.rs
---
Resume a paused destination

Usage: vendo destinations resume [OPTIONS] <destinationId>

Arguments:
  <destinationId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id)
  -h, --help            Print help

Examples:
  $ vendo destinations resume <destinationId>
  $ vendo destinations resume <destinationId> --dry-run
