rust/tests/snapshots/help/destinations__sync.snap
---
source: tests/cli/snapshots.rs
---
Trigger a manual sync

Usage: vendo destinations sync [OPTIONS] <destinationId>

Arguments:
  <destinationId>  

Options:
      --json            Output raw JSON
      --profile <name>  Use a specific account profile
      --debug           Enable verbose request diagnostics
      --watch           Watch the job until it completes
      --dry-run         Preview the action without executing
      --output <field>  Print a single field (e.g. id for job ID)
  -h, --help            Print help

Examples:
  $ vendo destinations sync <destinationId>
  $ vendo destinations sync <destinationId> --watch
  $ vendo destinations sync <destinationId> --dry-run
